tests/ui/comptime/trait_bounds.stderr
error: `[const]` is not allowed here
  --> $DIR/trait_bounds.rs:13:27
   |
LL | fn conditionally_const<T: [const] Trait>() {
   |                           ^^^^^^^
   |
note: this function is not `const`, so it cannot have `[const]` trait bounds
  --> $DIR/trait_bounds.rs:13:4
   |
LL | fn conditionally_const<T: [const] Trait>() {
   |    ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

